refactor MyBigtableWriteReadTest to add null checks for rows in processing logic